--- a/styles.css
+++ b/styles.css
@@ -59,41 +59,38 @@ div.console div.controls {
   height: 100%;
   box-sizing: border-box;
   padding: 0.5rem 0;
-  display: grid;
-  grid-template-rows: max-content 1fr max-content;
-  overflow-y: auto;
+  overflow-y: overlay;
   overflow-x: hidden;
+  display: flex;
+  gap: 0.5rem;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  flex-grow: 0;
 }
 
 div.console div.controls button {
   background-color: transparent;
-  margin: auto;
-  color: dimgray;
+  border: 2px solid rgb(72, 72, 72);
+  color: gray;
   padding: 0;
-  width: 48px;
-  height: 48px;
+  width: 3rem;
+  height: 3rem;
+  min-width: 3rem;
+  min-height: 3rem;
   border-radius: 50%;
-  border: 0;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-div.console div.controls div.buttons {
-  align-self: center;
+div.console div.controls button:hover {
+  background-color: rgb(72, 72, 72);
+  color: gainsboro;
 }
 
-div.console div.controls div.buttons > button {
-  margin: 0.5rem auto;
-  border: 2px solid rgb(75, 75, 75);
-}
-
-div.console div.controls div.buttons > button:first-child {
-  margin-top: 0;
-}
-
-div.console div.controls div.buttons > button:last-child {
-  margin-bottom: 0;
+div.console div.controls button:active {
+  background-color: rgb(64, 64, 64);
 }
 
 @media screen and (orientation: portrait) {
@@ -104,34 +101,10 @@ div.console div.controls div.buttons > button:last-child {
 
   div.console div.controls {
     padding: 0 0.5rem;
-    display: grid;
-    grid-template-rows: auto;
-    grid-template-columns: max-content 1fr max-content;
     overflow-x: auto;
     overflow-y: hidden;
-  }
-
-  div.console div.controls button {
-    margin: auto;
-  }
-
-  div.console div.controls div.buttons {
-    align-self: center;
-    display: flex;
-    justify-content: center;
-    gap: 0.5rem;
-  }
-
-  div.console div.controls div.buttons > button {
-    display: inline-block;
-    margin: 0;
-  }
-
-  div.console div.controls div.buttons > button:first-child {
-    margin-left: 0;
-  }
-
-  div.console div.controls div.buttons > button:last-child {
-    margin-right: 0;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
   }
 }
